improve rowspan border collapse handling, bug 157047 r=jkeiser, sr=roc+moz